components/minio/tenant-6.0.4/tenant/tenants/tempo-ossm3/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    v1.min.io/tenant: minio-tempo-ossm3
  name: minio
  namespace: opentelemetry
spec:
  host: minio-tempo-ossm3.apps.sno.shanehomelab.com
  port:
    targetPort: http-minio
  to:
    kind: Service
    name: minio
    weight: 100
  wildcardPolicy: None
